<resources>
    <string name="app_name">Employee Java</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Employee List</string>
    <string name="menu_gallery">Add Employee</string>

    <string name="hint_enter_name">Enter name</string>
    <string name="hint_enter_email">Enter email</string>
    <string name="hint_birthday">Birth date</string>
    <string name="text_age">Age:</string>
    <string name="text_year">Years:</string>
    <string name="text_gender">Gender:</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_reset">Reset</string>
    <string name="name_error">Enter Valid Name</string>
    <string name="email_error">Enter valid email</string>
    <string name="birtday_error">Select birthday from calender</string>
    <string name="hint_enter_password">Enter password</string>
</resources>
