<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:src="@drawable/ic_account_circle_black_24dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"/>

                <ImageView
                    android:id="@+id/imgEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit_black_24dp"
                    android:layout_alignTop="@id/imgProfile"
                    android:layout_alignEnd="@id/imgProfile"/>

            </RelativeLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/etName"
                android:hint="@string/hint_enter_name"
                android:padding="5dp"
                android:inputType="textCapSentences"
                android:background="@drawable/border"
                android:maxLines="1"
                android:maxLength="18"
                android:layout_margin="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:hint="@string/hint_enter_email"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:layout_margin="10dp"
                android:background="@drawable/border"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/etBirthday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_birthday"
                    android:padding="5dp"
                    android:background="@drawable/border_for_tv"/>

                <Button
                    android:id="@+id/btnCalender"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.2"
                    android:padding="5dp"
                    android:background="@drawable/ic_perm_contact_calendar_black_24dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.2"
                    android:text="@string/text_age"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/tvYear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_year"
                    android:textSize="14sp"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/border_for_tv"/>

            </LinearLayout>

            <RadioGroup
                android:id="@+id/rGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_gender"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <RadioButton
                    android:id="@+id/rBMale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_male"
                    android:checked="true"
                    android:background="@drawable/border_for_tv"
                    android:textSize="20sp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"/>

                <RadioButton
                    android:id="@+id/rBFemale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_female"
                    android:textSize="20sp"
                    android:background="@drawable/border_for_tv"
                    android:layout_weight="1"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/btn_submit"
                    android:textColor="#fff"
                    android:layout_marginRight="20dp"/>

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/btn_reset"
                    android:textColor="#fff"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
